--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,14 @@
     ["env", { "modules": false }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": [
+    ["transform-runtime"],
+    ["component", {
+      "libraryName": "element-ui",
+      "styleLibraryName": "theme-default"
+      }
+    ]
+  ],
   "comments": false,
   "env": {
     "test": {
