--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-plugin-component": "^0.10.0",
     "element-ui": "^1.4.2",
     "vue": "^2.4.2",
     "vue-router": "^2.3.0",
