--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.16.2",
     "babel-plugin-component": "^0.10.0",
     "element-ui": "^1.4.2",
+    "font-awesome": "^4.7.0",
     "vue": "^2.4.2",
     "vue-router": "^2.3.0",
     "vuex": "^2.3.1"
