--- a/package.json
+++ b/package.json
@@ -11,55 +11,52 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "chart.js": "^2.6.0",
-    "element-ui": "^1.4.3",
+    "babel-plugin-component": "^0.10.1",
+    "chart.js": "^2.7.0",
+    "element-ui": "^1.4.6",
     "font-awesome": "^4.7.0",
     "vue": "^2.4.2",
-    "vue-chartjs": "^2.8.2",
-    "vue-router": "^2.3.0",
-    "vuex": "^2.3.1"
+    "vue-chartjs": "^2.8.7",
+    "vue-router": "^2.7.0",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-component": "^0.10.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.4.2",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^1.1.3",
+    "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.28.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.10.0",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
-    "node-sass": "^4.5.2",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.1.0",
+    "node-sass": "^4.5.3",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.3",
+    "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
-    "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.2.4",
-    "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
