--- a/package.json
+++ b/package.json
@@ -23,6 +23,15 @@
   "babel": {
     "presets": [
       "@vue/app"
+    ],
+    "plugins": [
+      [
+        "component",
+        {
+          "libraryName": "element-ui",
+          "styleLibraryName": "theme-chalk"
+        }
+      ]
     ]
   },
   "postcss": {
