--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@nn-yy/scss-flex": "^0.1.0",
     "element-ui": "^2.3.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
