--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@nn-yy/scss-flex": "^0.2.1",
+    "@nn-yy/css-flex": "^1.3.0",
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
     "@vue/cli-service": "^3.0.0-beta.6",
     "babel-plugin-component": "^1.1.0",
