--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.1.0",
     "element-ui": "^2.4.0",
     "vue": "^2.5.13",
+    "vue-echarts": "^3.0.8",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
