--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.0",
     "lodash": "^4.17.10",
-    "vue": "^2.5.13",
+    "vue": "^2.5.16",
     "vue-echarts": "^3.0.8",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -19,11 +20,27 @@
   "devDependencies": {
     "@nn-yy/css-flex": "^1.3.0",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/eslint-config-prettier": "^3.0.0-rc.3",
     "babel-plugin-component": "^1.1.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.16"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "@vue/prettier"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
   },
   "babel": {
     "presets": [
