--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@vue/eslint-config-prettier": "^3.0.0-rc.3",
     "babel-plugin-component": "^1.1.0",
     "node-sass": "^4.9.0",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.16"
   },
