--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sass-loader": "^7.0.1",
     "vue-class-component": "^6.2.0",
     "vue-property-decorator": "^7.0.0",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "vuex-class": "^0.3.1"
   },
   "browserslist": [
     "> 1%",
