--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
     "@nn-yy/css-flex": "^1.3.0",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
     "@vue/eslint-config-prettier": "^3.0.0-rc.3",
     "babel-plugin-component": "^1.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "lint-staged": "^7.2.0",
     "node-sass": "^4.9.0",
     "pug": "^2.0.3",
