--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "lint-staged": "^7.2.0",
     "node-sass": "^4.9.0",
+    "path-to-regexp": "^2.2.1",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
