--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts": "^4.1.0",
     "element-ui": "^2.4.0",
     "lodash": "^4.17.10",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.16",
     "vue-echarts": "^3.0.8",
     "vue-router": "^3.0.1",
