--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "element-ui": "^2.4.0",
     "lodash": "^4.17.10",
     "nprogress": "^0.2.0",
-    "vue": "^2.5.16",
+    "vue": "^2.5.17",
     "vue-echarts": "^3.0.8",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -21,10 +21,10 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
     "@nn-yy/css-flex": "^1.3.0",
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "@vue/eslint-config-standard": "^3.0.0-rc.5",
+    "@vue/cli-plugin-babel": "^3.0.0",
+    "@vue/cli-plugin-eslint": "^3.0.0",
+    "@vue/cli-service": "^3.0.0",
+    "@vue/eslint-config-standard": "^3.0.0",
     "babel-plugin-component": "^1.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "lint-staged": "^7.2.0",
@@ -33,14 +33,9 @@
     "sass-loader": "^7.0.1",
     "vue-class-component": "^6.2.0",
     "vue-property-decorator": "^7.0.0",
-    "vue-template-compiler": "^2.5.16",
+    "vue-template-compiler": "^2.5.17",
     "vuex-class": "^0.3.1"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
