--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "echarts": "^4.1.0",
+    "element-china-area-data": "^4.1.1",
     "element-ui": "^2.4.6",
     "lodash": "^4.17.10",
     "nprogress": "^0.2.0",
