--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "build:serve": "cross-env NODE_ENV=development vue-cli-service build",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -28,6 +29,7 @@
     "@vue/eslint-config-standard": "^3.0.0",
     "babel-plugin-component": "^1.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "cross-env": "^5.2.0",
     "lint-staged": "^7.2.0",
     "node-sass": "^4.9.0",
     "path-to-regexp": "^2.2.1",
