--- a/package.json
+++ b/package.json
@@ -21,21 +21,24 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@nn-yy/css-flex": "^1.3.0",
-    "@vue/cli-plugin-babel": "^3.0.0",
-    "@vue/cli-plugin-eslint": "^3.0.0",
-    "@vue/cli-service": "^3.0.0",
-    "@vue/eslint-config-standard": "^3.0.0",
-    "babel-plugin-component": "^1.1.0",
+    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-plugin-eslint": "^3.1.5",
+    "@vue/cli-service": "^3.1.4",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "cross-env": "^5.2.0",
-    "lint-staged": "^7.2.0",
-    "node-sass": "^4.9.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0-0",
+    "lint-staged": "^7.2.2",
+    "node-sass": "^4.10.0",
     "path-to-regexp": "^2.2.1",
-    "sass-loader": "^7.0.1",
-    "vue-class-component": "^6.2.0",
-    "vue-property-decorator": "^7.0.0",
+    "sass-loader": "^7.1.0",
+    "vue-class-component": "^6.3.2",
+    "vue-property-decorator": "^7.2.0",
     "vue-template-compiler": "^2.5.17",
     "vuex-class": "^0.3.1"
   },
