--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "echarts": "^4.1.0",
     "element-china-area-data": "^4.1.1",
-    "element-ui": "^2.4.7",
+    "element-ui": "^2.4.10",
     "lodash": "^4.17.10",
     "nprogress": "^0.2.0",
-    "vue": "^2.5.17",
-    "vue-echarts": "^3.0.8",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-echarts": "^3.0.8"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.1.0",
