--- a/package.json
+++ b/package.json
@@ -9,33 +9,32 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "core-js": "^2.6.5",
     "element-china-area-data": "^4.1.1",
     "element-ui": "^2.4.10",
     "lodash": "^4.17.10",
+    "vue-property-decorator": "^8.1.1",
     "nprogress": "^0.2.0",
-    "vue-echarts": "^3.0.8"
+    "vue-echarts": "^3.0.8",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@nn-yy/css-flex": "^1.3.0",
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.5",
-    "@vue/cli-service": "^3.1.4",
+    "@nn-yy/css-flex": "^1.3.1",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "cross-env": "^5.2.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "lint-staged": "^7.2.2",
-    "node-sass": "^4.10.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "lint-staged": "^8.1.5",
+    "node-sass": "^4.9.0",
     "path-to-regexp": "^2.2.1",
     "sass-loader": "^7.1.0",
-    "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^7.2.0",
-    "vue-template-compiler": "^2.5.17",
-    "vuex-class": "^0.3.1"
+    "vue-template-compiler": "^2.5.21"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
